docs(swagger): get user by id
